tests/baselines/reference/augmentedTypesClass3.errors.txt
augmentedTypesClass3.ts(3,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
augmentedTypesClass3.ts(6,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
augmentedTypesClass3.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== augmentedTypesClass3.ts (3 errors) ====
    // class then module
    class c5 { public foo() { } }
    module c5 { } // should be ok
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    class c5a { public foo() { } }
    module c5a { var y = 2; } // should be ok
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    class c5b { public foo() { } }
    module c5b { export var y = 2; } // should be ok
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    //// class then import
    class c5c { public foo() { } }
    //import c5c = require('');